OpenColorIO Error with unicode path to config file under Windows #47869

Closed
opened 2016-03-21 05:41:05 +01:00 by perfection cat · 13 comments

System Information
Windows 10 Pro 64bits
NVidia GTX960 2GB + Geforce GT730
16GB RAM

Blender Version
Broken: 2.77 release version
Worked: (optional)

Short description of error
error message:
OpenColorIO Error: Error could not read 'F:\work*oS*\blender-2.77-windows64\2.77\datafiles\colormanagement\config.ocio' OCIO profile.
Color management: using fallback mode for management

A part of the BOLD notation is multi-byte character string.

Exact steps for others to reproduce the error
An error occurs at the time of start of blender in OpenColorIO when I install a 2.77 official release version in a file pass including the multi-byte character string.

OpenColorIO Error.png

**System Information** Windows 10 Pro 64bits NVidia GTX960 2GB + Geforce GT730 16GB RAM **Blender Version** Broken: 2.77 release version Worked: (optional) **Short description of error** error message: OpenColorIO Error: Error could not read 'F:\work\**oS**\blender-2.77-windows64\2.77\datafiles\colormanagement\config.ocio' OCIO profile. Color management: using fallback mode for management A part of the BOLD notation is multi-byte character string. **Exact steps for others to reproduce the error** An error occurs at the time of start of blender in OpenColorIO when I install a 2.77 official release version in a file pass including the multi-byte character string. ![OpenColorIO Error.png](https://archive.blender.org/developer/F297506/OpenColorIO_Error.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sindra1961

Added subscriber: @sindra1961
Bastien Montagne changed title from OpenColorIO Error: Error could not read ........... to OpenColorIO Error with unicode path to config file under Windows 2016-03-21 16:03:50 +01:00

Added subscribers: @MartijnBerger, @Sergey, @mont29

Added subscribers: @MartijnBerger, @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2016-03-21 16:04:36 +01:00

@Sergey think you are our OCIO guy? unless @MartijnBerger wants to handle that windows mess… ;)

@Sergey think you are our OCIO guy? unless @MartijnBerger wants to handle that windows mess… ;)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by ab4307aa08

This issue was referenced by ab4307aa0868f2d8389cc0dd500eff38909b08f1

This issue was referenced by c1095c7a9f

This issue was referenced by c1095c7a9f1c96a5bb249bed8e465e653a54a4dc

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Fix wasn't really correct. Re-opening for further investigation. But it might be a limitation of OCIO API :S

Fix wasn't really correct. Re-opening for further investigation. But it might be a limitation of OCIO API :S
Author

istream can handle multi-byte character string, but is caused by the fact that multi-byte character string is included in a parameter to generate istream instance.
I think that you should preprocess the argument which is used to generate istream instance.
The basic cause thinks that type of the argument of Config::CreateFromFile is inappropriate.

istream can handle multi-byte character string, but is caused by the fact that multi-byte character string is included in a parameter to generate istream instance. I think that you should preprocess the argument which is used to generate istream instance. The basic cause thinks that type of the argument of Config::CreateFromFile is inappropriate.

It is nothing to do with istream. that part works just fine and config file is parsed just nicely. The issue appears when OCIO needs to access lookup table referenced in the config file. OCIO needs to know where to find those lookup tables and in normal case this is how it works:

  • If config is created from a given file name, then the dirname of that file name is used as a search path. So if lookup tables are referenced by a relative path in the config it all works just fine.
  • Additionally you can give OCIO hints about search path osing Config::setSearchPath (or something like that).

The issue here is that both points (and underlying calls) operates with char * paths (and no _w* function extensions) which Windows API expects to be ANSI encoded a\, making it impossible to operate with multi-byte paths for OCIO.

There might be some workarounds for that, that's where i am atm.

It is nothing to do with `istream`. that part works just fine and config file is parsed just nicely. The issue appears when OCIO needs to access lookup table referenced in the config file. OCIO needs to know where to find those lookup tables and in normal case this is how it works: - If config is created from a given file name, then the `dirname` of that file name is used as a search path. So if lookup tables are referenced by a relative path in the config it all works just fine. - Additionally you can give OCIO hints about search path osing `Config::setSearchPath` (or something like that). The issue here is that both points (and underlying calls) operates with `char *` paths (and no _w* function extensions) which Windows API expects to be ANSI encoded a\\, making it impossible to operate with multi-byte paths for OCIO. There might be some workarounds for that, that's where i am atm.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

This is a limitation of 3rd party library API. I've reported it to the upstream: https://github.com/imageworks/OpenColorIO/issues/406

Will probably have time to look into solving it from OCIO side, but that's not a task of the bug tracker. So thanks for thee report, but closing it now.

This is a limitation of 3rd party library API. I've reported it to the upstream: https://github.com/imageworks/OpenColorIO/issues/406 Will probably have time to look into solving it from OCIO side, but that's not a task of the bug tracker. So thanks for thee report, but closing it now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47869
No description provided.