Fix T47869: OpenColorIO Error with unicode path to config file under Windows